<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uji Makanan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonView">View</string>
    <string name="butttonAdd">Add New</string>
    <string name="title_activity_all_ft">AllFTActivity</string>
    <string name="title_activity_new_ft">Tambah Uji</string>
    <string name="title_activity_edit_ft">Ubah Uji</string>
    <string name="editTextFoodName">Nama Makanan</string>
    <string name="editTextTestType">Reagen</string>
    <string name="editTextResult">Hasil</string>
    <string name="buttonCreate">Create FoodTest</string>
    <string name="buttonSave">Save</string>
    <string name="buttonDelete">Delete</string>
    <string name="title_activity_dashboard">Uji Makanan</string>
    <string name="menuTitleSave">menuTitleSave</string>
    <string name="menuTitleDelete">menuTitleDelete</string>

    <string-array name="testType">
        <item>Pilih Jenis Uji</item>
        <item>Boraks</item>
        <item>Formalin</item>
        <item>Merkuri</item>
        <item>Metanil-Yellow</item>
        <item>Rhodamin-B</item>
    </string-array>

    <string name="title_activity_new_reagent">Tambah Jenis Uji</string>
    <string name="buttonResult">Lihat Hasil</string>
    <string name="textViewResult">Hasil Uji</string>
    <string name="buttonAmbilGambar">Ambil Gambar</string>
    <string name="menuNew">menuTitleNew</string>
    <string name="menuManageReagen">Pengaturan Reagen</string>

</resources>
