<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ahmadfauzi.testconnect.NewFTActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/ivPhoto"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:src="@drawable/pp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gallery"
        android:id="@+id/btnGallery"
        android:layout_gravity="center_horizontal"
        android:onClick="imageGallery" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/editTextFoodName"
        android:textSize="20dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etReagent"
        android:textSize="20dp"
        android:hint="@string/editTextReagent"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etResult"
        android:hint="@string/editTextResult"
        android:textSize="20dp"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCreate"
        android:id="@+id/btnCreate"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
